--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h2>What is Repository??</h2>
     <img src="cbg.jpg">
+    <h1>Hello Iam Ikbal hOssain</h1>
+    <h3>/this is heading h3</h3>
 </body>
 </html>
